compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__duplicate_extfn_extfn.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1057
expression: "\n@external(erlang, \"module1\", \"function1\")\nfn foo() -> Float\n@external(erlang, \"module2\", \"function2\")\nfn foo() -> Float\n"
---
error: Duplicate definition
  ┌─ /src/one/two.gleam:3:1
  │
3 │ fn foo() -> Float
  │ ^^^^^^^^ First defined here
4 │ @external(erlang, "module2", "function2")
5 │ fn foo() -> Float
  │ ^^^^^^^^ Redefined here

`foo` has been defined multiple times.
Names in a Gleam module must be unique so one will need to be renamed.

